
  [ Stephane Glondu ]
  * New upstream release:
    - remove dbm_ldopts.dpatch (merged upstream)
    - switch patch system to quilt
  * debian/control:
    - update Standards-Version to 3.8.1
    - move to new section ocaml
    - change Recommends from ledit to "ledit | readline-editor" for
      ocaml-interp
    - remove various obsolete Conflicts and Replaces

 -- Stephane Glondu <steph@glondu.net>  Fri, 12 Jun 2009 15:50:22 +0200

ocaml (3.11.0-5) unstable; urgency=low

  * Uploading to unstable
  * debian/control: bump dh-ocaml to (>= 0.4) to avoid buggy ocamlinit.mk

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 22 Feb 2009 08:49:13 +0100

ocaml (3.11.0-4) experimental; urgency=low

  [ Samuel Mimram ]
  * Add native versions of ocamldep and ocamldoc in findlib's configuration
    when ocaml-native-compilers is installed, closes: #516085.

  [ Stephane Glondu ]
  * Add a script to handle native modules of standard library, and a
    README.source to document it (fixes FTBFS on sparc and powerpc, which
    are native, but do not provide .p.cmx files) (Closes: #516211)
  * Fix FTBFS on bytecode-only architectures:
    - generate manpages for stdlib
    - tell debhelper to ignore ocaml-native-compilers
  * Add lpia (from Ubuntu) to the list of native architectures

 -- Stephane Glondu <steph@glondu.net>  Fri, 20 Feb 2009 09:59:31 +0100

ocaml (3.11.0-3) experimental; urgency=low

  * Mark libthreadsnat.a as native-only file (fix FTBFS on bytecode-only
    architectures)

 -- Stephane Glondu <steph@glondu.net>  Thu, 19 Feb 2009 07:25:27 +0100

ocaml (3.11.0-2) experimental; urgency=low

  [ Stephane Glondu ]
  * Add DM-Upload-Allowed (with Stefano's blessing)
  * Remove binary package-specific copyright files
  * Major changes in debian/rules:
    - more extensive use of debhelper 7
    - do no longer use deprecated dh_movefiles and *.files
    - get closer to CDBS API
    - add versioned build-dependency to dh-ocaml